--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,1 +1,29 @@
+/* 
+		Block
+	Standalone entity that is meaningful on its own.
+
+	Examples
+	header, container, menu, checkbox, input
+	Element
+	A part of a block that has no standalone meaning and is semantically tied to its block.
+
+	Examples
+	menu item, list item, checkbox caption, header title
+	Modifier
+	A flag on a block or element. Use them to change appearance or behavior.
+
+	Examples
+	disabled, highlighted, checked, fixed, size big, color yellow
+*/
+
+
+
+/* Good */
+.block__elem { color: #042; }
+
+
+/* Bad */
+.block .block__elem { color: #042; }
+	div.block__elem { color: #042; }
+
 
